Moved logic to server. Added exploring

--- a/index.html
+++ b/index.html
@@ -2,4 +2,12 @@
 <title>Mars!</title>
 <style>
 </style>
+<h1>Mars yo</h1>
+<div id="message"></div>
+<div id="player">
+  <div id="numactions"></div>
+</div>
+<p id="locationdesc"></p>
+<div id="actions"></div>
+
 <script src="client.js"></script>
